[package]
name = "rust-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1"
dotenvy = "0.15"  # optional, for environment variables
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
